--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "md5": "^2.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.3",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "file-loader": "^6.2.0",
